# Flight_testing

./: KaPPTuRek.ork  README.md
Flight_state_tester/: .gitignore  CMakeCache.txt  CMakeLists.txt  FSD_tester  FSD_tester-config.cmake  Plotter.py  README.md  cmake_install.cmake
Flight_state_tester/data/: meas_parsed.csv
Flight_state_tester/include/: CMakeLists.txt  FlightStateDetector.h  MACROS.h
Flight_state_tester/src/: CMakeLists.txt  FlightStateDetector.cpp  main.cpp
